--- a/templates/download.html
+++ b/templates/download.html
@@ -29,7 +29,7 @@
 			<div class="navbar-header">
 				<img src={{ url_for('static', filename='/images/orbit_logo.jpg') }} alt="Orbit Logo" 
 				width="50" height="50" align="left">
-				<a class="navbar-brand" href="#halamanku">&#160; Orbit Future Academy</a>
+				<a class="navbar-brand" href="/">&#160; Orbit Future Academy</a>
 			</div>
             </div>
     </nav>
