ditambah css dan html

--- a/templates/download.html
+++ b/templates/download.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!-- Judul Halaman -->
-	<title>Orbit Future Academy</title>
+	<title>ALPHAZERO 4</title>
 	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,9 +27,9 @@
 			
 			<!-- Logo -->
 			<div class="navbar-header">
-				<img src={{ url_for('static', filename='/images/orbit_logo.jpg') }} alt="Orbit Logo" 
+				<img src={{ url_for('static', filename='/images/AZ1.png') }} alt="Alphazero Logo" 
 				width="50" height="50" align="left">
-				<a class="navbar-brand" href="/">&#160; Orbit Future Academy</a>
+				<a class="navbar-brand" href="/">&#160; ALPHAZERO 4</a>
 			</div>
             </div>
     </nav>
