--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,9 @@
 			
 			<!-- Logo -->
 			<div class="navbar-header">
-				<img src={{ url_for('static', filename='/images/orbit_logo.jpg') }} alt="Orbit Logo" 
+				<img src={{ url_for('static', filename='/images/AZ1.png') }} alt="Alphazero Logo" 
 				width="50" height="50" align="left">
-				<a class="navbar-brand" href="#halamanku">&#160; Orbit Future Academy</a>
+				<a class="navbar-brand" href="#halamanku">&#160; ALPHAZERO 4</a>
 			</div>
 			
 			<!-- Daftar Halaman -->
@@ -43,56 +43,27 @@
 		</div>
 	</nav>
 
-	<!-- Bagian Halaman (Informasi) -->
-	<div id="informasi" class="container-fluid">
-		<br>
-		<br>
-		<br>
-		<div class="row">
-			<div class="col-sm-6">
-				<!-- Deskripsi Aplikasi -->
-				<h2>ICA</h2>
-				<h4>Iris ClAssifier</h4><br>
-				<p style="text-align: justify;text-justify: inter-word;">
-					Aplikasi ini dibuat untuk menentukan spesies dari bunga iris berdasarkan pengukuran panjang serta lebar 
-					dari <i>sepal</i> dan <i>petal</i> bunga. "Iris Setosa", "Iris Versicolor", dan "Iris Virginica" 
-					adalah ketiga species bunga iris yang dapat diprediksi melalui aplikasi ini.
-					Pengguna hanya cukup memberikan 4 nilai pengukuran untuk dapat mengetahui spesies dari bunga iris tersebut.
-					Keempat nilai pengukuran tersebut adalah panjang <i>petal</i>, lebar <i>petal</i>, panjang <i>sepal</i>,
-					dan lebar <i>sepal</i>.
-				</p>
-				<br>
 
-				<!-- Tombol Mulai -->
-				<nav id="navgo" class="navbar" style="background-color:#ffffff;z-index: 0;">
-					<ul class="nav nav-pills">
-						<li class="nav-item">
-							<a class="btn btn-default btn-lg" href="#aplikasi" style="background-color:#28ace5">Mulai</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-			
-			<div class="col-sm-6">
-				<br>
-				<br>
-				<!-- Gambar Deskripsi Aplikasi -->
-				<img src={{ url_for('static', filename='/images/app-display.JPG') }} width="500" ></img>
-			</div>
+	<div class="jumbotron jumbotron-fluid" style="background-image: url(https://www.kibrispdr.org/data/24/bunga-bunga-iris-5.jpg); background-size:cover">
+		<div class="container">
+			<h1 class="display-4" style="color:white; font-size:25px; font-family: 'a Astro Space', sans-serif"><br><br>PENGUKURAN IRIS</h1>
+			<p style="color:white;font-size:16px">Aplikasi ini dibuat untuk menentukan spesies dari bunga iris <br> berdasarkan pengukuran panjang serta lebar 
+				dari <i>sepal</i> dan <i>petal</i> bunga.<br><br><br>
+				<a class="btn btn-primary btn-lg" href="#">START</a>
+			</p>
+			</img>
 		</div>
-		<br>
 	</div>
+
 	
 
 	<!-- Bagian Halaman (Aplikasi) -->
 	<div id="aplikasi" data-bs-spy="scroll" data-bs-target="#navgo" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-		<br>
-		<br>
 		<div class="row">
 			<div class="col-sm-6">
 				</br>
 				<!-- Input Nilai Pengukuran dari Pengguna -->
-				<h3 style="margin-left: 50px;">Nilai Pengukuran </h3>
+				<h3 style="margin-left: 50px; color:purple; font-family: 'a Astro Space', sans-serif">Nilai Pengukuran </h3>
 				<form>
 					<div class="form-group" style="margin-left: 50px;">
 						<!-- Input Slider untuk Nilai Pengukuran Bunga Iris -->
@@ -135,7 +106,7 @@
 
 	<!-- Prediksi CSV -->
 
-	<h2 style="margin-left: 50px;">Prediksi CSV</h2>
+	<h2 style="margin-left: 50px; color: purple; font-family: 'a Astro Space', sans-serif">Prediksi CSV</h2>
 	<hr>
 	<div class="prediksicsv" style="margin-left: 50px;">
 
@@ -150,7 +121,7 @@
 	<!-- Bagian Halaman (Anggota Kelompok) -->
 	<div id="anggotaKelompok" class="container-fluid text-center">
 		<br>
-		<h2>ANGGOTA KELOMPOK</h2>
+		<h2 style="color: purple; font-family: 'a Astro Space', sans-serif" >ANGGOTA KELOMPOK</h2>
 		<h4>Alphazero-4</h4>
 		<br>
 		<div class="row slideanim">
