--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,12 @@
 	<h2 style="margin-left: 50px; color: purple; font-family: 'a Astro Space', sans-serif">Prediksi CSV</h2>
 	<hr>
 	<div class="prediksicsv" style="margin-left: 50px;">
-
+	{% if error %}
+	<div class="alert alert-danger alert-dismissible" role="alert">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		<strong>{{ error }}</strong>
+	</div>
+	{% endif %}
 	<form action="{{url_for('deteksicsv')}}" method="POST" enctype="multipart/form-data">
 	<input type="file" id="myFile" name="uploaded-file" accept=".csv">
 	<button type="submit" class="btn btn-default btn-lg" style="margin-top: 10px;">Prediksi</button>
